version 0.1.1
- Bugfix in range calculation causing bad distance computation. 

version 0.1.0 
- First release
